--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "devDependencies": {
     "webpack": "^5.32.0",
     "webpack-cli": "^4.6.0"
+  },
+  "dependencies": {
+    "notie": "^4.3.1"
   }
 }
